--- a/app/index.html
+++ b/app/index.html
@@ -3,19 +3,26 @@
 <head>
 	<title>Example App</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
 	<script type="text/x-handlebars" data-template-name="application">
-		<nav class="navbar navbar-default" role="navigation">
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
 					<a href="#" class="navbar-brand">Brand</a>
 				</div>
 				<ul class="nav navbar-nav navbar-right">
-					<li>{{#link-to 'home'}}home{{/link-to}}</li>
-					<li>{{#link-to 'about'}}about{{/link-to}}</li>
-					<li>{{#link-to 'contact'}}contact{{/link-to}}</li>
+					{{#link-to 'home' tagName='li'}}
+						<a href="#">home <span class="glyphicon glyphicon-home"></span></a>
+					{{/link-to}}
+					{{#link-to 'about' tagName='li'}}
+						<a href="#">about <span class="glyphicon glyphicon-info-sign"></span></a>
+					{{/link-to}}
+					{{#link-to 'contact' tagName='li'}}
+						<a href="#">contact <span class="glyphicon glyphicon-phone-alt"></span></a>
+					{{/link-to}}
 				</ul>			
 			</div>			
 		</nav>
